# EvolSynth-API

./: BACKEND_INTEGRATION_SETUP.md  CHANGELOG.md  Dockerfile  Dockerfile.railway  MERGE.md  RAILWAY_DEPLOYMENT.md  RAILWAY_DEPLOY_FIX.md  RAILWAY_QUICK_START.md  README.md  Synthetic_Data_Generation_RAGAS_&_LangSmith_Assignment.ipynb  docker-compose.deploy.yml  docker-compose.yml  env.performance.example  pyproject.toml  railway.toml  redis.conf  requirements-test.txt  requirements.txt  test_backend.py  test_redis_connection.py
api/: README.md  __init__.py  config.py  main.py  main_original_backup.py  performance_optimization_config.py  start.py  start_optimized.py
api/config/: __init__.py  core.py  environments.py  performance.py
api/docs/: __init__.py
api/models/: __init__.py  core.py  requests.py  responses.py
api/services/: __init__.py  document_service.py  evaluation_service.py  evol_instruct_service.py  optimized_evol_service.py
api/tasks/: background_tasks.py
api/utils/: __init__.py  cache_manager.py  error_handling.py  health_checks.py  logging_config.py  secrets.py  security.py  (+1 more)
deploy/: README.md  health_check.py  railway.env.example  railway.toml  start.sh
docs/: DEPLOYMENT.md  DEPLOYMENT_CACHE.md  DEPLOYMENT_SUCCESS.md  DEVELOPMENT.md  PERFORMANCE_IMPROVEMENTS.md  RAILWAY_QUICK_START.md
frontend/: README.md  VERCEL_DEPLOY.md  package-lock.json  package.json  tailwind.config.ts  vercel.json
notebooks/: Bonus_Activity.ipynb
scripts/: deploy.sh
tests/: __init__.py  conftest.py  run_tests.py  test_backend.py  test_redis_connection.py
(+16 files in other folders)
